--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,15 +7,16 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
-
+	<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.coolweather.app.activity.ChooseAreaActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
