--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -27,6 +27,12 @@
             android:name="com.coolweather.app.activity.WeatherActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar"/>
+		<receiver 
+            android:name="com.coolweather.app.receiver.AutoUpdateReceiver"
+            ></receiver>
+        <service 
+            android:name="com.coolweather.app.service.AutoUpdateService"
+            ></service>
     </application>
 
 </manifest>
