--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,13 +8,20 @@
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+	<uses-permission android:name="android.permission.GET_TASKS" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.coolweather.app.activity.ChooseAreaActivity"
+            android:name="com.coolweather.app.start.SplashActivity"
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
@@ -23,6 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.coolweather.app.start.GuideActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar"/>
+        <activity
+            android:name="com.coolweather.app.activity.ChooseAreaActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar"/>
 		<activity
             android:name="com.coolweather.app.activity.WeatherActivity"
             android:label="@string/app_name" 
@@ -33,6 +48,24 @@
         <service 
             android:name="com.coolweather.app.service.AutoUpdateService"
             ></service>
+        
+        <activity
+    android:name="net.youmi.android.AdBrowser"
+    android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+    android:theme="@android:style/Theme.Light.NoTitleBar" >
+</activity>
+<service
+    android:name="net.youmi.android.AdService"
+    android:exported="false" >
+</service>
+<receiver
+    android:name="net.youmi.android.AdReceiver" >
+    <intent-filter>
+        <action android:name="android.intent.action.PACKAGE_ADDED" />
+        <data android:scheme="package" />
+    </intent-filter>
+</receiver>
+
     </application>
 
 </manifest>
