--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name="com.coolweather.app.start.SplashActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,15 +34,18 @@
         <activity
             android:name="com.coolweather.app.start.GuideActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar"/>
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.coolweather.app.activity.ChooseAreaActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar"/>
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:screenOrientation="portrait"/>
 		<activity
             android:name="com.coolweather.app.activity.WeatherActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar"/>
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:screenOrientation="portrait"/>
 		<receiver 
             android:name="com.coolweather.app.receiver.AutoUpdateReceiver"
             ></receiver>
@@ -65,6 +69,29 @@
         <data android:scheme="package" />
     </intent-filter>
 </receiver>
+
+<meta-data
+    android:name="YOUMI_CHANNEL"
+    android:value="10360" >
+</meta-data>
+
+<meta-data
+    android:name="YOUMI_CHANNEL"
+    android:value="10190" >
+</meta-data>
+
+<meta-data
+    android:name="YOUMI_CHANNEL"
+    android:value="10050" >
+</meta-data>
+
+<meta-data
+    android:name="YOUMI_CHANNEL"
+    android:value="10030" >
+</meta-data>
+
+
+
 
     </application>
 
